--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "next-themes": "^0.4.6",
     "openai": "^6.2.0",
     "partial-json": "^0.1.7",
+    "pg": "^8.16.3",
     "react": "^19",
     "react-day-picker": "9.8.0",
     "react-dom": "^19",
@@ -76,6 +77,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
     "@types/node": "^22",
+    "@types/pg": "^8.15.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "drizzle-kit": "^0.31.5",
